# xt_wgobfs

./: Makefile.am  Makefile.libxt.in  README.md  configure.ac  dkms.conf  dkms.post-build  dkms.post-install  dkms.post-remove  dkms.pre-build  version.sh
kernel/: Makefile  chacha8.c  chacha8.h  xt_WGOBFS_main.c
openwrt/package/: Makefile  README.md
src/: Kbuild  Makefile  Makefile.am  Makefile.libxt.in  chacha.c  chacha.h  chacha8.c  dkms.conf  libxt_WGOBFS.c  wg.h  xt_WGOBFS.h  xt_WGOBFS_main.c
xtables/: libxt_WGOBFS.c
